<?xml version="1.0"?>
<package format="2">
  <name>wheels</name>
  <version>0.1.0</version>
  <description>A package that will drive the wheels on the robot.</description>
  <maintainer email="joshuakortje@cedarville.edu">Joshua Kortje</maintainer>

  <license>CLOSED</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
